--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.1.3",
     "clsx": "^2.1.1",
+    "dedent": "^1.5.3",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
