--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dedent": "^1.5.3",
     "lucide-react": "^0.453.0",
@@ -19,6 +21,7 @@
     "shadcn": "^1.0.0",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.9.0"
   },
   "devDependencies": {
