--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,7 @@
-{"plugins": ["prettier-plugin-tailwindcss"]}
+{
+  "endOfLine": "lf",
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
+}
